--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+
 {
   "name": "express-api-starter",
   "version": "1.0.0",
@@ -14,6 +16,7 @@
     "@babel/preset-env": "^7.16.11",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-list-endpoints": "^6.0.0",
     "mongoose": "^6.3.0",
     "nodemon": "^2.0.15"
   }
